Refactor exam management functionality
- Removed AddStudentsPage and StartExamPage as they are no longer needed.
- Updated CreateExamPage to handle exam creation via button click instead of command binding.
- Implemented AddStudentsToExamViewModel to manage student assignments to exams.
- Created AddStudentsToExamPage for adding students to a specific exam.
- Enhanced ExamsViewModel to load and navigate to student addition and exam processing.
- Developed ProcessExamViewModel to manage the exam process, including student handling and grading.
- Updated UI for ExamsPage, AddStudentsToExamPage, and ProcessExamPage to reflect new functionality.
- Added migrations for database schema changes related to student exams and grades.

--- a/ExamAppMAUI/ExamAppMAUI.csproj
+++ b/ExamAppMAUI/ExamAppMAUI.csproj
@@ -40,6 +40,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Maui" Version="9.0.0-preview.2.2024041001" />
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
